# fakelogs

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  db.py
app/auth/: models.py  routes.py  security.py
app/templates/: base.html  home.html  login.html  signup.html
openspec/: project.md
openspec/changes/add-user-auth-jwt/: proposal.md  tasks.md
openspec/changes/add-user-auth-jwt/specs/auth/: spec.md
