[project]
name = "vercel-flask-starter"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "flask>=3.1,<4.0",
  "gunicorn~=23.0.0",
  "sqlalchemy>=2.0,<3.0",
  "pyjwt>=2.9,<3.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app"]
